--- a/app/src/main/res/drawable/note_background.xml
+++ b/app/src/main/res/drawable/note_background.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="2dp"
-        android:color="#FFF"
+        android:color="#333333"
         />
     <corners android:radius="12dp" />
-    <solid android:color="#f6f6f6"/>
+    <solid android:color="#333333"/>
 </shape>
