--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:id="@+id/MainR"
+    android:background="@color/black"
     android:layout_height="match_parent">
 
 <LinearLayout
@@ -15,21 +16,26 @@
     android:orientation="horizontal">
     <TextView
         android:id="@+id/textView"
-        android:layout_width="@dimen/_235sdp"
+        android:layout_width="@dimen/_210sdp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:fontFamily="@font/sf_pro_display_bold"
+        android:fontFamily="@font/sf_pro_display_regular"
         android:text="Notes"
-        android:textColor="@color/black"
+        android:textColor="#CCCCCC"
         android:textSize="28sp" />
+    <ImageView
+        android:id="@+id/Wifi"
+        android:visibility="visible"
+        android:layout_width="@dimen/_35sdp"
+        android:layout_height="@dimen/_22sdp"
+        app:srcCompat="@drawable/wifi" />
 
     <ImageView
         android:id="@+id/logout"
         android:visibility="visible"
         android:layout_width="@dimen/_40sdp"
-        android:layout_marginEnd="@dimen/_20sdp"
-        android:layout_height="@dimen/_30sdp"
-        app:srcCompat="@drawable/ic_logout" />
+        android:layout_height="@dimen/_23sdp"
+        app:srcCompat="@drawable/logout" />
 
 </LinearLayout>
 
@@ -42,17 +48,18 @@
         android:layout_marginTop="@dimen/_10sdp"
         android:layout_marginEnd="@dimen/_40sdp"
         android:layout_marginStart="@dimen/_7sdp"
+        android:layout_marginBottom="@dimen/_10sdp"
         tools:listitem="@layout/note_item" />
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/loading_bar"
         android:layout_width="@dimen/_100sdp"
         android:layout_height="@dimen/_100sdp"
+        android:layout_marginTop="@dimen/_230sdp"
+        android:layout_marginStart="@dimen/_100sdp"
         android:visibility="gone"
         app:lottie_autoPlay="true"
-        android:layout_centerInParent="true"
-        android:layout_marginEnd="@dimen/_30sdp"
-        app:lottie_colorFilter="@color/black"
+        app:lottie_colorFilter="@color/white"
         app:lottie_loop="true"
         app:lottie_rawRes="@raw/load" />
 
@@ -61,13 +68,15 @@
         android:id="@+id/add_note"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="28dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="@dimen/_140sdp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="@dimen/_50sdp"
+        android:layout_marginBottom="28dp"
         android:contentDescription="@string/todo"
-        app:backgroundTint="@color/light_gray"
+        app:backgroundTint="#FF5252"
         app:fabSize="normal"
-        app:srcCompat="@drawable/ic_add" />
+        app:tint="@android:color/white"
+        app:srcCompat="@drawable/ic_baseline_add_24" />
 
 
 
